[+] core/admin/prepend.php refacto and optimisations #458 (bazooka07)
[+] New plugins hooks for plxShow->artNavigation() (sudwebdesign)
[+] Add sitemap.xml validation (P3ter)
[+] Rename plugin folder if necessary #477 (bazooka07)
[+] Externalise comments js script to increase security #476 (Thatoo)
[+] Refacto plxShow::lastComList #510 (bazooka07)
[+] PHPMailer update to 6.5.0 (P3ter)
FIX Do not unset CSRF token if $_POST is empty #286 (sudwebdesign)
FIX Wording and translation of L_MEDIAS_MAX_UPLOAD_NBFILE #286 (sudwebdesign) 
FIX Wording and translation of L_CONFIG_ADVANCED_USERFOLDERS #286 (sudwebdesign)
FIX Missing polish translations #374 (P3ter)
FIX Article edition always show comments as enabled #402 (bazooka07)
FIX $plxShow->artNbCom() with no comments #432 (bazooka07)
FIX $plxShow->lastArtList() chapo and content length #433 (P3ter)
FIX Templates sorting in static page admin #440 (bazooka07)
FIX Diverse .htaccess fixes #444 (bazooka07)
FIX Error "Constant PLX_SITE_LANG already defined" #455 (bazooka07)
FIX Media breadcrumb links #470 #472 (sudwebdesign, bazooka07)
FIX Languages fixes #494 (bazooka07)
FIX plxShow::lastArtList() do not display moderated articles #504 (bazooka07)
FIX Article tags with accents #507 (bazooka07)

## PLUXML 5.8.7 (2021/06/03) ##
[+] Move plugins cached css files to data folder #526 (bazooka07)
[+] Open static page from administration in a new tab #532 (bazooka07)
[+] i18n Occitan correction #535 (Mejans)
[+] PHPMailer update to 6.4.1 (P3ter)
FIX Comments no more displayed with PHP8 #529 (bazooka07)
FIX Revert .htaccess generation for plugins compatibility with url rewrite (P3ter)
FIX Wrong use of uasort() in pages and categories edition #530 (bazooka07)
FIX Display 404 error page when switching to a theme with a missing template #533 (bazooka07)
FIX Category creation can replace an existing category #534 (bazooka07)
FIX Minors CSS fixes (P3ter)

## PLUXML 5.8.6 (2021/02/15) ##